raw-manifests/kong/virtualnode.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: $KONG_NS
  labels:
    mesh: $DEMO_APP_MESH_NAME
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
